Fix gdpr text color

--- a/assets/ak-v3.css
+++ b/assets/ak-v3.css
@@ -5749,6 +5749,9 @@ a.text-white-trans {
   border-color: rgba(255, 255, 255, 0.15);
   color: #ffffff;
 }
+.bg-dkgray_opaque-fade .ak-privacy {
+  color: #ffffff;
+}
 
 /* Nav Color */
 nav.bg-dkgray li,
