--- a/assets/ak-v3.css
+++ b/assets/ak-v3.css
@@ -2336,30 +2336,32 @@ a.tf-logo:hover {
 }
 
 /* FOOTER OPAQUE */
-.Signup footer.bg-blue_opaque,
-.Petition footer.bg-blue_opaque,
-.Letter footer.bg-blue_opaque {
+.Signup.afteraction-flow footer.bg-blue_opaque,
+.Petition.afteraction-flow footer.bg-blue_opaque,
+.Letter.afteraction-flow footer.bg-blue_opaque {
   background-color: #0f81e8;
 }
 
-.Signup footer.bg-white_opaque,
-.Petition footer.bg-white_opaque,
-.Letter footer.bg-white_opaque {
+.Signup.afteraction-flow footer.bg-white_opaque,
+.Petition.afteraction-flow footer.bg-white_opaque,
+.Letter.afteraction-flow footer.bg-white_opaque {
   background-color: rgba(255,255,255);
 }
 
-.Signup footer.bg-dkgray_opaque,
-.Petition footer.bg-dkgray_opaque,
-.Letter footer.bg-dkgray_opaque {
+.Signup.afteraction-flow footer.bg-dkgray_opaque,
+.Petition.afteraction-flow footer.bg-dkgray_opaque,
+.Letter.afteraction-flow footer.bg-dkgray_opaque {
   background-color: rgba(23,36,41);
   color: #fff;
 }
 
-#donation-other, #site-footer {
+.afteraction-flow #donation-other,
+.afteraction-flow #site-footer {
   background-color: #0E76D8;
   color: white;
 }
-#donation-other a, #site-footer a {
+.afteraction-flow #donation-other a,
+.afteraction-flow #site-footer a {
   color: white;
 }
 
@@ -4490,12 +4492,12 @@ label.ak-survey-radio-choice {
   color: #fff;
 }
 
-:is(.Signup, .Petition, .Letter, .Donation) .bg-dkgray_opaque-fade span.highlight.bg-dkgray-trans {
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) .bg-dkgray_opaque-fade span.highlight.bg-dkgray-trans {
   background: rgba(255, 255, 255, 0.10);
 }
 
 /* SHARED LAYOUT */
-:is(.Signup, .Petition, .Letter, .Donation) [class$="_opaque-fade"] .section-inner {
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class$="_opaque-fade"] .section-inner {
   padding: 48px 36px;
   border-radius: 64px;
   max-width: 1133px;
@@ -4504,21 +4506,21 @@ label.ak-survey-radio-choice {
 }
 
 /* HEADER, FORM & COPY */
-:is(.Signup, .Petition, .Letter, .Donation) [class$="_opaque-fade"] .section-inner #action-header {
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class$="_opaque-fade"] .section-inner #action-header {
   max-width: 520px;
   padding: 0 24px;
 }
 
-:is(.Signup, .Petition, .Letter, .Donation) [class$="_opaque-fade"] .section-inner #action-form {
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class$="_opaque-fade"] .section-inner #action-form {
   margin: auto;
 }
 
-:is(.Signup, .Petition, .Letter, .Donation) [class$="_opaque-fade"] .section-inner p {
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class$="_opaque-fade"] .section-inner p {
   font-family: Klima, -apple-system, BlinkMacSystemFont, Arial, sans-serif;
 }
 
 /* HIGHLIGHT BOX */
-:is(.Signup, .Petition, .Letter, .Donation) [class$="_opaque-fade"] .section-inner .highlight {
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class$="_opaque-fade"] .section-inner .highlight {
   border-radius: 8px;
   background: #144872;
   height: 52px;
@@ -4531,7 +4533,7 @@ label.ak-survey-radio-choice {
 }
 
 /* TITLE */
-:is(.Signup, .Petition, .Letter, .Donation) [class$="_opaque-fade"] .section-inner #action-title {
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class$="_opaque-fade"] .section-inner #action-title {
   margin-top: 25px;
   font-size: 58px;
   font-weight: 400;
@@ -5144,7 +5146,7 @@ input:checked+.toggle-donation-type .toggle-option-2 {
 
 @media screen and (max-width: 900px) {
 
-  :is(.Signup, .Petition, .Letter, .Donation) #action-lead[class$="_opaque-fade"] {
+  :is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) #action-lead[class$="_opaque-fade"] {
     padding: 16px;
   }
 
@@ -5159,7 +5161,7 @@ input:checked+.toggle-donation-type .toggle-option-2 {
     padding: 4rem;
   }
 
-  :is(.Signup, .Petition, .Letter, .Donation) [class$="_opaque-fade"] .section-inner {
+  :is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class$="_opaque-fade"] .section-inner {
     padding: 0 0 32px;
     border-radius: 0;
     z-index: 20;
@@ -5178,20 +5180,20 @@ input:checked+.toggle-donation-type .toggle-option-2 {
     background: linear-gradient(180deg, rgba(23, 36, 41, 0) 0%, #172429 5%);
   }
 
-  :is(.Signup, .Petition, .Letter, .Donation) [class$="_opaque-fade"] .section-inner #action-header {
+  :is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class$="_opaque-fade"] .section-inner #action-header {
     max-width: 100%;
     padding: 0;
   }
 
-  :is(.Signup, .Petition, .Letter, .Donation) [class$="_opaque-fade"] .section-inner #action-title {
+  :is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class$="_opaque-fade"] .section-inner #action-title {
     font-size: 43px;
     font-weight: 400;
     line-height: normal;
   }
 
-  :is(.Signup, .Petition, .Letter, .Donation) #body-mobile-background.bg-blue_opaque,
-  :is(.Signup, .Petition, .Letter, .Donation) #body-mobile-background.bg-white_opaque,
-  :is(.Signup, .Petition, .Letter, .Donation) #body-mobile-background.bg-dkgray_opaque {
+  :is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) #body-mobile-background.bg-blue_opaque,
+  :is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) #body-mobile-background.bg-white_opaque,
+  :is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) #body-mobile-background.bg-dkgray_opaque {
     height: 443px;
     width: calc(100% - 32px);
     left: 16px;
@@ -5201,15 +5203,15 @@ input:checked+.toggle-donation-type .toggle-option-2 {
     z-index: 10;
   }
 
-  body:is(.Signup, .Petition, .Letter, .Donation).body-blue_opaque {
+  body:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow).body-blue_opaque {
     background: #0F81E9;
   }
 
-  body:is(.Signup, .Petition, .Letter, .Donation).body-white_opaque {
+  body:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow).body-white_opaque {
     background: #ffffff;
   }
 
-  body:is(.Signup, .Petition, .Letter, .Donation).body-dkgray_opaque {
+  body:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow).body-dkgray_opaque {
     background: #172429;
   }
 }
@@ -5660,46 +5662,46 @@ a.bg-blue {
 a.bg-blue:hover {
   color: rgba(255, 255, 255, 0.75);
 }
-:is(.Signup, .Petition, .Letter, .Donation) [class*="_opaque"]:not(.bg-white_opaque):not(.bg-white_opaque-fade) a,
-:is(.Signup, .Petition, .Letter, .Donation) [class*="_opaque"]:not(.bg-white_opaque):not(.bg-white_opaque-fade) .text-color-override a {
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class*="_opaque"]:not(.bg-white_opaque):not(.bg-white_opaque-fade) a,
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class*="_opaque"]:not(.bg-white_opaque):not(.bg-white_opaque-fade) .text-color-override a {
   color: rgba(255, 255, 255, 0.75);
 }
 
-:is(.Signup, .Petition, .Letter, .Donation) [class*="_opaque"]:not(.bg-white_opaque):not(.bg-white_opaque-fade) a:hover,
-:is(.Signup, .Petition, .Letter, .Donation) [class*="_opaque"]:not(.bg-white_opaque):not(.bg-white_opaque-fade) .text-color-override a:hover {
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class*="_opaque"]:not(.bg-white_opaque):not(.bg-white_opaque-fade) a:hover,
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class*="_opaque"]:not(.bg-white_opaque):not(.bg-white_opaque-fade) .text-color-override a:hover {
   color: rgba(255, 255, 255, 0.3);
 }
 
-:is(.Signup, .Petition, .Letter, .Donation) a[class*="_opaque"]:not(.bg-white_opaque),
-:is(.Signup, .Petition, .Letter, .Donation) [class*="_opaque-fade"]:not(.bg-white_opaque-fade) a {
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) a[class*="_opaque"]:not(.bg-white_opaque),
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class*="_opaque-fade"]:not(.bg-white_opaque-fade) a {
   color: #ffffff;
 }
 
-:is(.Signup, .Petition, .Letter, .Donation) a[class*="_opaque"]:not(.bg-white_opaque):hover {
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) a[class*="_opaque"]:not(.bg-white_opaque):hover {
   color: rgba(255, 255, 255, 0.75);
 }
 
-:is(.Signup, .Petition, .Letter, .Donation) .bg-white_opaque a,
-:is(.Signup, .Petition, .Letter, .Donation) .bg-white_opaque .text-color-override a,
-:is(.Signup, .Petition, .Letter, .Donation) .bg-white_opaque-fade a,
-:is(.Signup, .Petition, .Letter, .Donation) .bg-white_opaque-fade .text-color-override a {
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) .bg-white_opaque a,
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) .bg-white_opaque .text-color-override a,
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) .bg-white_opaque-fade a,
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) .bg-white_opaque-fade .text-color-override a {
   color: #144872;
 }
 
-:is(.Signup, .Petition, .Letter, .Donation) .bg-white_opaque a:hover,
-:is(.Signup, .Petition, .Letter, .Donation) .bg-white_opaque .text-color-override a:hover,
-:is(.Signup, .Petition, .Letter, .Donation) .bg-white_opaque-fade a:hover,
-:is(.Signup, .Petition, .Letter, .Donation) .bg-white_opaque-fade .text-color-override a:hover {
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) .bg-white_opaque a:hover,
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) .bg-white_opaque .text-color-override a:hover,
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) .bg-white_opaque-fade a:hover,
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) .bg-white_opaque-fade .text-color-override a:hover {
   color: rgba(20, 72, 114, 0.75);
 }
 
-:is(.Signup, .Petition, .Letter, .Donation) a.bg-white_opaque,
-:is(.Signup, .Petition, .Letter, .Donation) .bg-white_opaque-fade a {
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) a.bg-white_opaque,
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) .bg-white_opaque-fade a {
   color: #144872;
 }
 
-:is(.Signup, .Petition, .Letter, .Donation) a.bg-white_opaque:hover,
-:is(.Signup, .Petition, .Letter, .Donation) .bg-white_opaque-fade a:hover {
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) a.bg-white_opaque:hover,
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) .bg-white_opaque-fade a:hover {
   color: rgba(20, 72, 114, 0.75);
 }
 
