--- a/assets/ak-v3.css
+++ b/assets/ak-v3.css
@@ -64,6 +64,10 @@ body.bg-on {
   background-color: #17292e;
 }
 
+body:is(.Signup, .Petition, .Letter, .Donation).body-blue_opaque {
+  background: #0F81E9;
+}
+
 #body-mobile-background {
   background: center/cover no-repeat scroll transparent;
   display: block;
@@ -103,7 +107,7 @@ h5 a {
   text-decoration: none;
 }
 
-h1:last-child. h2:last-child,
+h1:last-child.h2:last-child,
 h3:last-child {
   margin-bottom: 0;
 }
@@ -2331,6 +2335,35 @@ a.tf-logo:hover {
   display: inline-block;
 }
 
+/* FOOTER OPAQUE */
+.Signup.afteraction-flow footer.bg-blue_opaque,
+.Petition.afteraction-flow footer.bg-blue_opaque,
+.Letter.afteraction-flow footer.bg-blue_opaque {
+  background-color: #0f81e8;
+}
+
+.Signup.afteraction-flow footer.bg-white_opaque,
+.Petition.afteraction-flow footer.bg-white_opaque,
+.Letter.afteraction-flow footer.bg-white_opaque {
+  background-color: rgba(255,255,255);
+}
+
+.Signup.afteraction-flow footer.bg-dkgray_opaque,
+.Petition.afteraction-flow footer.bg-dkgray_opaque,
+.Letter.afteraction-flow footer.bg-dkgray_opaque {
+  background-color: rgba(23,36,41);
+  color: #fff;
+}
+
+.afteraction-flow #donation-other,
+.afteraction-flow #site-footer {
+  background-color: #0E76D8;
+  color: white;
+}
+.afteraction-flow #donation-other a,
+.afteraction-flow #site-footer a {
+  color: white;
+}
 
 /* Mobile Only */
 @media only screen and (max-width:720px) {
@@ -4443,6 +4476,70 @@ label.ak-survey-radio-choice {
   color: #fff;
 }
 
+/* FADE COLOURS */
+.bg-blue_opaque-fade .section-inner {
+  background-color: #0F81E9;
+  color: #fff;
+}
+
+.bg-white_opaque-fade .section-inner {
+  background-color: #ffffff;
+  color: #144872;
+}
+
+.bg-dkgray_opaque-fade .section-inner {
+  background-color: #172429;
+  color: #fff;
+}
+
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) .bg-dkgray_opaque-fade span.highlight.bg-dkgray-trans {
+  background: rgba(255, 255, 255, 0.10);
+}
+
+/* SHARED LAYOUT */
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class$="_opaque-fade"] .section-inner {
+  padding: 48px 36px;
+  border-radius: 64px;
+  max-width: 1133px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+/* HEADER, FORM & COPY */
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class$="_opaque-fade"] .section-inner #action-header {
+  max-width: 520px;
+  padding: 0 24px;
+}
+
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class$="_opaque-fade"] .section-inner #action-form {
+  margin: auto;
+}
+
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class$="_opaque-fade"] .section-inner p {
+  font-family: Klima, -apple-system, BlinkMacSystemFont, Arial, sans-serif;
+}
+
+/* HIGHLIGHT BOX */
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class$="_opaque-fade"] .section-inner .highlight {
+  border-radius: 8px;
+  background: #144872;
+  height: 52px;
+  padding: 12px;
+  gap: 10px;
+  color: #fff;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: normal;
+}
+
+/* TITLE */
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class$="_opaque-fade"] .section-inner #action-title {
+  margin-top: 25px;
+  font-size: 58px;
+  font-weight: 400;
+  line-height: normal;
+}
+
 .bg-orange-fade {
   background-color: rgba(255, 169, 2, 0.7);
   color: #fff;
@@ -4760,6 +4857,29 @@ label.ak-donate-step.active-step .inline-dot {
   color: #fff;
 }
 
+.bg-dkgray_opaque-fade label.ak-donate-step.active-step .inline-dot {
+	background: #FFFFFF1A;
+}
+
+.bg-dkgray_opaque-fade #ak-multi-currency {
+  color: #fff;
+}
+
+.bg-white_opaque-fade label.ak-donate-step .inline-dot {
+	background: #ffffff;
+  color: #144872;
+  border-color: #144872;
+}
+
+.bg-white_opaque-fade #ak-multi-currency {
+  color: #144872;
+}
+
+.bg-white_opaque-fade .ak-donate-step-1 .ak-step-number::after, .bg-white_opaque-fade .ak-donate-step-2 .ak-step-number::after, .bg-white_opaque-fade .ak-donate-step-1 .ak-step-complete::after{
+	background-color: #144872 !important;
+}
+
+
 .ak-donate-step-2 {
   padding: 0 1.5em;
   position: relative;
@@ -5024,12 +5144,76 @@ input:checked+.toggle-donation-type .toggle-option-2 {
   flex: 1;
 }
 
-@media screen and (max-width:720px) {
+@media screen and (max-width: 900px) {
+
+  :is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) #action-lead[class$="_opaque-fade"] {
+    padding: 16px;
+  }
+
+  [class$="_opaque-fade"] .section-inner #action-header {
+    margin: auto;
+    max-width: 650px;
+  }
+}
+@media screen and (max-width: 720px) {
 
   #action-after-header {
     padding: 4rem;
   }
 
+  :is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class$="_opaque-fade"] .section-inner {
+    padding: 0 0 32px;
+    border-radius: 0;
+    z-index: 20;
+    top: 228px;
+  }
+
+  .bg-blue_opaque-fade .section-inner {
+    background: linear-gradient(180deg, rgba(15, 129, 233, 0) 0%, #0F81E9 5%);
+  }
+
+  .bg-white_opaque-fade .section-inner {
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #ffffff 5%);
+  }
+
+  .bg-dkgray_opaque-fade .section-inner {
+    background: linear-gradient(180deg, rgba(23, 36, 41, 0) 0%, #172429 5%);
+  }
+
+  :is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class$="_opaque-fade"] .section-inner #action-header {
+    max-width: 100%;
+    padding: 0;
+  }
+
+  :is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class$="_opaque-fade"] .section-inner #action-title {
+    font-size: 43px;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  :is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) #body-mobile-background.bg-blue_opaque,
+  :is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) #body-mobile-background.bg-white_opaque,
+  :is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) #body-mobile-background.bg-dkgray_opaque {
+    height: 443px;
+    width: calc(100% - 32px);
+    left: 16px;
+    border-radius: 24px;
+    position: absolute;
+    top: 16px;
+    z-index: 10;
+  }
+
+  body:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow).body-blue_opaque {
+    background: #0F81E9;
+  }
+
+  body:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow).body-white_opaque {
+    background: #ffffff;
+  }
+
+  body:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow).body-dkgray_opaque {
+    background: #172429;
+  }
 }
 
 @media screen and (min-width:720px) {
@@ -5061,7 +5245,7 @@ input:checked+.toggle-donation-type .toggle-option-2 {
 
   .bg-orange-fade {
     background-color: transparent;
-    background-image: lin©ear-gradient(to bottom, rgba(255, 169, 2, 0.5) 0%, rgba(255, 169, 2, 0.95) 500px, rgba(255, 169, 2, 0.95) 100%);
+    background-image: linear-gradient(to bottom, rgba(255, 169, 2, 0.5) 0%, rgba(255, 169, 2, 0.95) 500px, rgba(255, 169, 2, 0.95) 100%);
   }
 
 
@@ -5110,7 +5294,6 @@ input:checked+.toggle-donation-type .toggle-option-2 {
     left: 13%;
     width: 74%;
   }
-
 }
 
 @media screen and (min-width:900px) {
@@ -5479,6 +5662,48 @@ a.bg-blue {
 a.bg-blue:hover {
   color: rgba(255, 255, 255, 0.75);
 }
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class*="_opaque"]:not(.bg-white_opaque):not(.bg-white_opaque-fade) a,
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class*="_opaque"]:not(.bg-white_opaque):not(.bg-white_opaque-fade) .text-color-override a {
+  color: rgba(255, 255, 255, 0.75);
+}
+
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class*="_opaque"]:not(.bg-white_opaque):not(.bg-white_opaque-fade) a:hover,
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class*="_opaque"]:not(.bg-white_opaque):not(.bg-white_opaque-fade) .text-color-override a:hover {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) a[class*="_opaque"]:not(.bg-white_opaque),
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) [class*="_opaque-fade"]:not(.bg-white_opaque-fade) a {
+  color: #ffffff;
+}
+
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) a[class*="_opaque"]:not(.bg-white_opaque):hover {
+  color: rgba(255, 255, 255, 0.75);
+}
+
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) .bg-white_opaque a,
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) .bg-white_opaque .text-color-override a,
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) .bg-white_opaque-fade a,
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) .bg-white_opaque-fade .text-color-override a {
+  color: #144872;
+}
+
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) .bg-white_opaque a:hover,
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) .bg-white_opaque .text-color-override a:hover,
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) .bg-white_opaque-fade a:hover,
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) .bg-white_opaque-fade .text-color-override a:hover {
+  color: rgba(20, 72, 114, 0.75);
+}
+
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) a.bg-white_opaque,
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) .bg-white_opaque-fade a {
+  color: #144872;
+}
+
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) a.bg-white_opaque:hover,
+:is(.Signup.afteraction-flow, .Petition.afteraction-flow, .Letter.afteraction-flow, .Donation.afteraction-flow) .bg-white_opaque-fade a:hover {
+  color: rgba(20, 72, 114, 0.75);
+}
 
 /* Thick Underline */
 .text-underline-thick-blue {
@@ -5551,6 +5776,9 @@ a.text-white-trans {
 .button.bg-dkgray {
   background-color: rgb(23, 41, 46);
   border-color: rgba(255, 255, 255, 0.15);
+  color: #ffffff;
+}
+.bg-dkgray_opaque-fade .ak-privacy {
   color: #ffffff;
 }
 
