--- a/assets/ak-v3.css
+++ b/assets/ak-v3.css
@@ -4866,7 +4866,7 @@ label.ak-donate-step.active-step .inline-dot {
   color: #fff;
 }
 
-.bg-white_opaque-fade label.ak-donate-step .inline-dot {
+#afteraction-flow-share .bg-white_opaque-fade label.ak-donate-step .inline-dot {
 	background: #ffffff;
   color: #144872;
   border-color: #144872;
@@ -4876,10 +4876,12 @@ label.ak-donate-step.active-step .inline-dot {
   color: #144872;
 }
 
-.bg-white_opaque-fade .ak-donate-step-1 .ak-step-number::after, .bg-white_opaque-fade .ak-donate-step-2 .ak-step-number::after, .bg-white_opaque-fade .ak-donate-step-1 .ak-step-complete::after{
+.bg-white_opaque-fade .ak-donate-step-1 .ak-step-number::after,
+.bg-white_opaque-fade .ak-donate-step-2 .ak-step-number::after,
+.bg-white_opaque-fade .ak-donate-step-1 .ak-step-complete::after,
+.bg-white_opaque-fade .ak-donate-step-2 .ak-step-complete::after {
 	background-color: #144872 !important;
 }
-
 
 .ak-donate-step-2 {
   padding: 0 1.5em;
